Fix ResponsiveCardGrid custom clamp method to use Math.clamp